round class and smart strategy setup