@@ -1,12 +1,13 @@
 package oh_heaven.game.strategy;
 
 import ch.aplu.jcardgame.Card;
-import ch.aplu.jcardgame.Hand.SortType;
 import oh_heaven.game.Round;
 import oh_heaven.game.player.AIPlayer;
+import oh_heaven.game.utility.CardComparator;
 import oh_heaven.game.utility.ServiceRandom;
 
-import java.util.ArrayList;
+import java.util.*;
+import java.util.Comparator;
 
 public class SmartStrategy implements IPlayStrategy{
 
@@ -18,34 +19,65 @@ public class SmartStrategy implements IPlayStrategy{
             return ServiceRandom.randomCard(player.getHand());
         }
 
+        Comparator cmp = new CardComparator();
         ArrayList<Card> sameSuitAsLead = player.getHand().getCardsWithSuit((round.getLead()));
+        sameSuitAsLead.sort(cmp);
         ArrayList<Card> sameSuitAsTrump = player.getHand().getCardsWithSuit((round.getTrump()));
+        sameSuitAsLead.sort(cmp);
+        ArrayList<Card> allCards = new ArrayList<>(player.getHand().getCardList());
+        allCards.sort(cmp);
 
-        ArrayList<Card> leadSuitInTrick = round.getTrick().getCardsWithSuit((round.getLead()));
-        ArrayList<Card> TrumpSuitInTrick = round.getTrick().getCardsWithSuit((round.getTrump()));
+        Card winningCard = round.getWinningCard();
 
+        int size = sameSuitAsLead.size();
         // check whether there are card with lead suit
-        if(sameSuitAsLead.size() > 0){
-            // with lead suit
-            // no one is larger than those already in trick >>> return the smallest one
-
-            // has one that is larger >>> randomly choose one from the available ones
-            return ServiceRandom.randomCard(sameSuitAsLead);
+        // with lead suit cards
+        if(size > 0){
+            // check current winning card
+            if(winningCard.getSuit() == round.getLead()){
+                //current winning card is lead suit
+                for(Card card:sameSuitAsLead){
+                    // check if any larger than the winning card
+                    if(cmp.compare(card, winningCard) > 0){
+                        return card;
+                    }
+                }
+                // no one is larger than the winning card
+                // play the least value
+                return sameSuitAsLead.get(0);
+            }else {
+                // current winning card is trump suit
+                // the least value with lead
+                return sameSuitAsLead.get(0);
+            }
         }
 
+        size = sameSuitAsTrump.size();
         // without lead suit
-        if(sameSuitAsTrump.size() > 0){
-            // with trump suit
-            // no one is larger than those already in trick  >>> return other suit
-
-            // has one that is larger >>> randomly choose one from the available ones
-            return ServiceRandom.randomCard(sameSuitAsLead);
+        if(size > 0){
+            // check current winning card
+            if(winningCard.getSuit() == round.getLead()){
+                //current winning card is lead suit
+                // any trump card will win
+                return ServiceRandom.randomCard(sameSuitAsTrump);
+            }else {
+                //current winning card is lead suit
+                for(Card card:sameSuitAsTrump){
+                    // play the one is larger than the winning card
+                    if(cmp.compare(card, winningCard) > 0){
+                        return card;
+                    }
+                }
+                // no one is larger than the winning card
+                // play the least rank one in hand
+                allCards.removeAll(sameSuitAsTrump);
+                return allCards.get(0);
+            }
         }
         else {
             // no trump suit or no lead suit in hand
             // choose the one with the least rank
-            player.getHand().sort(SortType.RANKPRIORITY, false);
-            return player.getHand().getFirst();
+            return allCards.get(0);
         }
 
     }
